# Data-Analyst-Agent

./: .dockerignore  .env  .gitignore  .gitleaks.toml  requirements-api.txt  requirements-dev.txt  requirements-worker.txt  requirements.txt
backend/: Makefile  alembic.ini  pyproject.toml
backend/agents/: __init__.py
backend/agents/analysis/: __init__.py
backend/agents/analysis/forecast/: __init__.py  arima_runner.py  forecast_agent.py  model_selector.py  prophet_runner.py  ts_detector.py  xgboost_forecaster.py
backend/agents/analysis/ml/: __init__.py  auto_ml_pipeline.py  feature_engineer.py  ml_agent.py  model_registry.py
backend/agents/analysis/python/: __init__.py  code_generator.py  output_parser.py  python_agent.py  sandboxed_executor.py
backend/agents/analysis/sql/: __init__.py  duckdb_executor.py  sql_agent.py  sql_generator.py  sql_validator.py
backend/agents/analysis/visualization/: __init__.py  chart_type_selector.py  vega_spec_generator.py  visualization_agent.py
backend/agents/base/: __init__.py  agent_context.py  agent_result.py  base_agent.py  tool_registry.py
backend/agents/control/: __init__.py
backend/agents/control/intent/: __init__.py  intent_agent.py  intent_schema.py
backend/agents/control/memory/: __init__.py  conversation_compressor.py  episodic_store.py  memory_agent.py
backend/agents/control/orchestrator/: __init__.py  (+3 more)
backend/agents/data/: __init__.py
backend/agents/output/: __init__.py
backend/agents/quality/: __init__.py
backend/analytics_engine/: __init__.py
backend/analytics_engine/anomaly_detection/: __init__.py  anomaly_detector.py  iqr_detector.py  isolation_forest.py  rule_detector.py  zscore_detector.py
backend/analytics_engine/cleaning/: __init__.py  data_cleaner.py  duplicate_remover.py  missing_value_handler.py  outlier_handler.py  type_coercer.py
backend/analytics_engine/ingestion/: __init__.py  file_reader.py  format_detector.py  stream_processor.py
backend/analytics_engine/profiling/: __init__.py  categorical_profiler.py  data_profiler.py  datetime_profiler.py  numeric_profiler.py  text_profiler.py
backend/analytics_engine/sql_engine/: __init__.py  duckdb_manager.py  query_builder.py  result_formatter.py
backend/analytics_engine/statistics/: __init__.py  correlation_engine.py  distribution_fitter.py  hypothesis_tester.py  trend_analyzer.py
backend/api/: __init__.py  dependencies.py  main.py
backend/api/middleware/: __init__.py  correlation_id.py  error_handler.py  rate_limiting.py  request_logging.py  security_headers.py
backend/api/routers/: __init__.py  conversations.py  datasets.py  exports.py  health.py  insights.py  jobs.py
backend/api/schemas/: __init__.py  common_schemas.py  conversation_schemas.py  dataset_schemas.py  export_schemas.py  insight_schemas.py
backend/api/websocket/: __init__.py  ws_event_router.py  ws_server.py
backend/application/: __init__.py
backend/application/commands/: __init__.py  export_report_command.py  run_analysis_command.py  send_message_command.py  upload_dataset_command.py
backend/application/event_handlers/: __init__.py  on_analytics_completed.py  on_dataset_uploaded.py  on_insight_report_generated.py  on_profiling_completed.py  on_schema_inferred.py
backend/application/ports/: __init__.py  cache_port.py  event_bus_port.py  job_port.py  llm_port.py  storage_port.py  vector_store_port.py
backend/application/queries/: __init__.py  get_conversation_query.py  get_dataset_query.py  get_insights_query.py  get_job_status_query.py
backend/application/use_cases/: __init__.py  create_conversation.py  export_report.py  get_dataset.py  get_insights.py  get_job_status.py  run_analysis.py  send_message.py  upload_dataset.py
backend/config/: __init__.py  bedrock_config.py  feature_flags.py  logging_config.py  settings.py
backend/domain/: __init__.py
backend/domain/analytics/: __init__.py  exceptions.py
backend/domain/dataset/: __init__.py  exceptions.py
backend/domain/insight/: __init__.py  exceptions.py
backend/domain/intelligence/: __init__.py  exceptions.py
backend/domain/workspace/: __init__.py  exceptions.py
backend/infrastructure/: __init__.py
backend/infrastructure/analytics_db/: __init__.py  clickhouse_client.py  column_stats_writer.py
backend/infrastructure/cache/: __init__.py  in_memory_cache_adapter.py  redis_cache_adapter.py
backend/infrastructure/job_queue/: __init__.py  celery_app.py  celery_job_adapter.py
backend/infrastructure/llm/: __init__.py  llm_port.py  llm_response_cache.py  model_id_registry.py  token_tracker.py
backend/infrastructure/messaging/: __init__.py  kafka_consumer.py  kafka_event_bus.py
backend/infrastructure/observability/: __init__.py  audit_logger.py  otel_setup.py  prometheus_metrics.py  structured_logger.py
backend/infrastructure/persistence/: __init__.py  database.py
backend/infrastructure/storage/: __init__.py  local_storage_adapter.py  s3_storage_adapter.py
backend/infrastructure/vector_store/: __init__.py  bedrock_embedding_service.py  collection_manager.py  qdrant_adapter.py
backend/orchestration/: __init__.py
backend/orchestration/conditions/: __init__.py  has_time_series.py  should_retry.py
backend/orchestration/graphs/: __init__.py  analysis_pipeline_graph.py  chat_query_graph.py  report_generation_graph.py
backend/orchestration/nodes/: __init__.py  analysis_fan_in_node.py  analysis_fan_out_node.py  cleaning_node.py  critic_node.py  insight_node.py  profiling_node.py  report_node.py  schema_node.py
backend/orchestration/state/: __init__.py  chat_state.py  pipeline_state.py
backend/shared/: __init__.py  aggregate_root.py  domain_event.py  entity.py  exceptions.py  repository.py  value_object.py
backend/shared/utils/: __init__.py  datetime_utils.py  hash_utils.py  uuid_factory.py
backend/tests/: __init__.py  conftest.py
backend/tests/e2e/: test_full_lifecycle.py
backend/tests/evals/: eval_runner.py
backend/tests/integration/: test_analysis_pipeline.py  test_bedrock_integration.py  test_chat_pipeline.py  test_report_generation.py  test_upload_pipeline.py
(+384 files in other folders)
