# ===========================================================================
# DataPilot Backend — pyproject.toml
# Build system: Hatchling  |  Python 3.12+
# ===========================================================================

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "datapilot-backend"
version     = "1.0.0"
description = "DataPilot Enterprise AI Data Analyst — Backend Service"
readme      = "README.md"
license     = { text = "Proprietary" }
requires-python = ">=3.12"

dependencies = [
    # ── API & WebSocket ─────────────────────────────────────────────────────
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "python-socketio==5.11.3",
    "python-multipart==0.0.9",
    "websockets==13.0",

    # ── Data validation / settings ──────────────────────────────────────────
    "pydantic==2.9.0",
    "pydantic-settings==2.5.2",

    # ── Database (async PostgreSQL) ──────────────────────────────────────────
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "alembic==1.13.2",

    # ── Cache / message broker ───────────────────────────────────────────────
    "redis[hiredis]==5.1.0",
    "celery[redis]==5.4.0",

    # ── AWS (Bedrock + S3) ───────────────────────────────────────────────────
    "boto3==1.35.20",
    "botocore==1.35.20",

    # ── Kafka event streaming ────────────────────────────────────────────────
    "aiokafka==0.11.0",
    "fastavro==1.9.6",        # Avro serialisation for Glue Schema Registry

    # ── Data analytics core ──────────────────────────────────────────────────
    "pandas==2.2.3",
    "polars==1.8.2",
    "numpy==2.1.1",
    "pyarrow==17.0.0",        # Parquet read/write
    "duckdb==1.1.1",          # In-process SQL engine

    # ── Statistical analysis ─────────────────────────────────────────────────
    "scipy==1.14.1",
    "statsmodels==0.14.3",
    "scikit-learn==1.5.2",

    # ── Forecasting ──────────────────────────────────────────────────────────
    "prophet==1.1.5",
    "statsforecast==1.7.5",   # AutoARIMA via StatsForecast
    "xgboost==2.1.1",

    # ── Agent orchestration ──────────────────────────────────────────────────
    "langgraph==0.2.28",
    "langchain-core==0.3.10",

    # ── Vector store ─────────────────────────────────────────────────────────
    "qdrant-client==1.11.3",

    # ── Report generation ────────────────────────────────────────────────────
    "weasyprint==62.3",       # PDF from HTML
    "python-pptx==1.0.2",    # PowerPoint slides
    "openpyxl==3.1.5",        # Excel workbooks

    # ── Security / PII detection ─────────────────────────────────────────────
    "presidio-analyzer==2.2.355",
    "presidio-anonymizer==2.2.355",

    # ── Observability ────────────────────────────────────────────────────────
    "opentelemetry-api==1.27.0",
    "opentelemetry-sdk==1.27.0",
    "opentelemetry-exporter-otlp==1.27.0",
    "opentelemetry-instrumentation-fastapi==0.48b0",
    "prometheus-client==0.21.0",
    "structlog==24.4.0",

    # ── ML experiment tracking ───────────────────────────────────────────────
    "mlflow==2.16.2",

    # ── Utilities ────────────────────────────────────────────────────────────
    "httpx==0.27.2",
    "python-dateutil==2.9.0",
    "chardet==5.2.0",         # File encoding detection
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "anyio==4.6.0",
    "httpx==0.27.2",          # TestClient
    "asgi-lifespan==2.1.0",   # Lifespan-aware test setup

    # Mocking / faking
    "moto[s3,secretsmanager]==5.0.14",   # AWS mock
    "fakeredis[aioredis]==2.25.1",        # Redis mock
    "respx==0.21.1",                      # HTTPX mock

    # Code quality
    "ruff==0.6.8",
    "mypy==1.11.2",
    "types-python-dateutil==2.9.0.20240906",
]

# ── Entry points ──────────────────────────────────────────────────────────────
[project.scripts]
datapilot-api    = "backend.api.main:app"
datapilot-worker = "backend.infrastructure.job_queue.celery_app:celery_app"

# ── Hatch build config ────────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["backend"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py312"
src            = ["backend"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations (type hints)
    "S",   # flake8-bandit (security)
]
ignore = [
    "ANN101", # missing self annotation
    "ANN102", # missing cls annotation
    "S101",   # assert statements (allowed in tests)
    "S105",   # hardcoded password (false positives in config)
    "S106",   # hardcoded password as kwarg (false positives: Prometheus "token_type" labels)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/**"          = ["S", "ANN"]
"infrastructure/persistence/migrations/**" = ["ALL"]
# LLM prompt templates with one long line each (an enum list embedded in an
# f-string JSON example) — splitting mid-string-literal would corrupt the
# prompt content, so E501 is exempted for these specific files only.
"agents/control/intent/intent_agent.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending  = "lf"

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version            = "3.12"
strict                    = false
ignore_missing_imports    = true
disallow_untyped_defs     = true
disallow_incomplete_defs  = true
warn_unused_ignores       = true
warn_return_any           = false
exclude                   = ["backend/infrastructure/persistence/migrations/"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode   = "auto"
testpaths      = ["backend/tests"]
python_files   = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts        = "--tb=short -q"
markers = [
    "unit: fast tests with no external dependencies",
    "integration: tests that require running infrastructure (Postgres, Redis)",
    "e2e: full end-to-end tests that require a complete stack",
    "eval: LLM agent evaluation tests (slow, costs API tokens)",
]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source   = ["backend"]
omit     = [
    "backend/tests/*",
    "backend/infrastructure/persistence/migrations/*",
]

[tool.coverage.report]
show_missing  = true
skip_covered  = false
fail_under    = 70

[tool.coverage.html]
directory = "htmlcov"
